--- a/students/anthony-wan.html
+++ b/students/anthony-wan.html
@@ -138,7 +138,7 @@
                 <div class="services-title"><h3>Biography</h3></div>
                 <div class="clear"></div>
                 <p>
-                  Bio here... Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut. 
+                    Born and raised in Brooklyn. Originally an Accountant but decided to learn to code. Have a passion for combat sports and skateboarding. 
                 </p>
               </div>
             </div>
