all changes ready to go

--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
                 <!-- Begin Student 1 -->
                 <li class="home-blog-post">
                   <div class="blog-thumb">
-                    <a href="students/student_name.html">
+                    <a href="students/anthony-wan.html">
                       <img
                         width="304"
                         height="304"
                         class="prof-image"
-                        src="img/students/student_name_index_profile.jpg"
+                        src="img/students/KEV_8538.JPG"
                         class="attachment-blog-thumb wp-post-image"
                         alt="student_name"
                       />
@@ -165,15 +165,18 @@
                   <div class="blog-title">
                     <div class="big-comment">
                       <h3>
-                        <a href="students/student_name.html">Student Name</a>
+                        <a href="students/anthony-wan.html">Anthony Wan</a>
                       </h3>
                     </div>
-                    <p class="home-blog-post-meta">Tag Line</p>
+                    <p class="home-blog-post-meta">Flatiron Student</p>
                   </div>
                   <div class="clear"></div>
 
                   <div class="excerpt">
-                    <p>Excerpt.</p>
+                    <p>
+                      Born and raised in Brooklyn. Have a passion for combat
+                      sports and skateborading.
+                    </p>
                   </div>
                   <div class="clear"></div>
                 </li>
