--- a/index.html
+++ b/index.html
@@ -123,76 +123,26 @@
               <li class="home-blog-post">
                 <div class="blog-thumb">
                   <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                    <img width="304" height="304" class="prof-image" src="img/students/Colin_Profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/student_name.html">Colin Tatro</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">Flatiron Student</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>Born and raised in New Hampshire. Worked in reality television and then worked in IT. Have a passion for board games, books, video games, and dogs.</p>
                 </div>
                 <div class="clear"></div>
               </li>
               <!-- End Student 2 -->
-
-              <!-- Begin Student 3 -->
-              <li class="home-blog-post">
-                <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
-                  </a>
-                </div>
-
-                <div class="blog-title">
-                  <div class="big-comment">
-                    <h3>
-                      <a href="students/student_name.html">Student Name</a>
-                    </h3>
-                  </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
-                </div>
-                <div class="clear"></div>
-
-                <div class="excerpt">
-                  <p>Excerpt.</p>
-                </div>
-                <div class="clear"></div>
-              </li>
-              <!-- End Student 3 -->
-
-              <!-- Begin Student 4 -->
-              <li class="home-blog-post">
-                <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
-                  </a>
-                </div>
-
-                <div class="blog-title">
-                  <div class="big-comment">
-                    <h3>
-                      <a href="students/student_name.html">Student Name</a>
-                    </h3>
-                  </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
-                </div>
-                <div class="clear"></div>
-
-                <div class="excerpt">
-                  <p>Excerpt.</p>
-                </div>
-                <div class="clear"></div>
-              </li>
-              <!-- End Student 4 -->
 
               <!-- Duplicate li code block above to place more students here -->
 
