--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <!-- Begin Student 2 -->
                 <li class="home-blog-post">
                   <div class="blog-thumb">
-                    <a href="students/student_name.html">
+                    <a href="students/Colin_Tatro.html">
                       <img
                         width="304"
                         height="304"
@@ -200,7 +200,7 @@
                   <div class="blog-title">
                     <div class="big-comment">
                       <h3>
-                        <a href="students/student_name.html">Colin Tatro</a>
+                        <a href="students/Colin_Tatro.html">Colin Tatro</a>
                       </h3>
                     </div>
                     <p class="home-blog-post-meta">Flatiron Student</p>
